# apps/server/src/contexts/project-role/infrastructure/repositories/prisma.project-role.repository.ts
@@ -37,4 +37,56 @@ export class PrismaProjectRoleRepository implements ProjectRoleRepositoryPort {
     if (!toDomain.success) return Result.fail(toDomain.error as string);
     return Result.ok(toDomain.value);
   }
+
+  async findById(id: string): Promise<Result<ProjectRole, string>> {
+    try {
+      const projectRole = await this.prisma.projectRole.findUnique({
+        where: { id },
+        include: {
+          techStacks: true,
+        },
+      });
+
+      if (!projectRole) {
+        return Result.fail('Project role not found');
+      }
+
+      const toDomain = PrismaProjectRoleMapper.toDomain(projectRole);
+      if (!toDomain.success) return Result.fail(toDomain.error as string);
+      return Result.ok(toDomain.value);
+    } catch (error) {
+      return Result.fail(`Error finding project role: ${error}`);
+    }
+  }
+
+  async update(projectRole: ProjectRole): Promise<Result<ProjectRole, string>> {
+    try {
+      const repoProjectRole = projectRole.toPrimitive();
+
+      // Mise à jour avec gestion des relations techStacks
+      const updatedProjectRole = await this.prisma.projectRole.update({
+        where: { id: repoProjectRole.id },
+        data: {
+          title: repoProjectRole.title,
+          description: repoProjectRole.description,
+          isFilled: repoProjectRole.isFilled,
+          techStacks: {
+            set: [], // Supprimer toutes les relations existantes
+            connect: repoProjectRole.techStacks.map((techStack) => ({
+              id: techStack.id,
+            })),
+          },
+        },
+        include: {
+          techStacks: true,
+        },
+      });
+
+      const toDomain = PrismaProjectRoleMapper.toDomain(updatedProjectRole);
+      if (!toDomain.success) return Result.fail(toDomain.error as string);
+      return Result.ok(toDomain.value);
+    } catch (error) {
+      return Result.fail(`Error updating project role: ${error}`);
+    }
+  }
 }
